Switch to parcel

--- a/examples/index.html
+++ b/examples/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Formality</title>
+    <title>re-formality</title>
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <div id="app" />
-    <script src="./build/app.js"></script>
+    <script src="./index.re"></script>
   </body>
 </html>
