--- a/examples/src/index.html
+++ b/examples/src/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="app" />
-    <script src="./index.bs.js"></script>
+    <script type="module" src="./index.bs.js"></script>
   </body>
 </html>
